syntax = "proto2";

package models;

option go_package = "github.com/philipparndt/unifi-access/access-mqtt-trace/proto";

// Device status message - sent to /uctrl/{controller}/device/{device}/stat
message DeviceStat {
  required string id = 1;      // Device ID (MAC without colons)
  required string model = 2;   // Device model (e.g., UA-G3-Pro, UA-Hub-Door-Mini)
  required string name = 3;    // Device display name
  repeated string attrs = 4;   // Key=value attributes
}

// Wrapper message for stat messages
message StatMessage {
  optional DeviceStat device_stat = 2;
}

// Remote view request - /remote_view RPC
message DARemoteView {
  required string agura_channel = 1;     // Agora video channel (typo in original)
  optional string app_id = 2;
  optional string user_id = 3;
  optional string user_name = 4;
  optional string device_id = 5;
  optional string action = 6;
  optional string video_token = 7;
  optional string agora_app_id = 8;
  optional string room_id = 9;
  optional string request_id = 10;
  optional string doorbell_channel = 11;
  optional bool disable_pickup = 12;
}

// Doorbell call message
message CallDoorBell {
  required string id = 1;
  optional string capture_id = 2;
}

// Remote door open request - /remote_open_door RPC
message DARemoteOpenDoor {
  optional string request_id = 1;
  optional string user_id = 2;
  optional string user_name = 3;
  optional string door_name = 4;
  optional string worker_id = 5;     // User ID who opened the door
  optional string worker_name = 6;   // User name who opened the door
}

// Third party SIP call request - /third_party_sip_call RPC
message ThirdPartySipCallRequest {
  optional string request_id = 1;
  repeated ThirdPartySipPhoneNumber phone_numbers = 2;
  optional bool canceled = 3;
}

message ThirdPartySipPhoneNumber {
  optional string account_name = 1;
  optional string phone_number = 2;
}

// MQTT Message wrapper - this is the outer envelope for ALL MQTT messages
// The entire MQTT payload is a protobuf-encoded Message
message Message {
  repeated MetaData meta = 1;  // Key-value metadata
  optional bytes payloads = 2; // Inner protobuf payload (e.g., DARemoteView)
}

// Metadata key-value pair
message MetaData {
  required string key = 1;
  required string value = 2;
}

// RPC Meta Keys:
// For requests:
//   - "path": RPC endpoint (e.g., "/remote_view")
//   - "requestId": unique request ID
//   - "_remote": "true" for bridged messages
// For responses:
//   - "code": response code (0 = success)
//   - "error": error message
//   - "requestId": echoed from request

// Example: To trigger doorbell on Viewer via MQTT
// 1. Topic: /uctrl/{controller_id}/device/{viewer_id}/rpc/{client_id}/request
// 2. Payload: Message {
//      meta: [{key: "path", value: "/remote_view"},
//             {key: "requestId", value: "unique-id"}]
//      payloads: <DARemoteView protobuf bytes>
//    }
